# ci-build-analyzer

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/build_analyzer/: analyzer.py
tests/: test_analyzer.py
